Delegate methods to applications

--- a/app/views/admin/reports/_header_details.html.haml
+++ b/app/views/admin/reports/_header_details.html.haml
@@ -19,7 +19,7 @@
       .report-header__details__item__header
         %strong= t('admin.reports.reported_with_application')
       .report-header__details__item__content
-        = report.application.name
+        = report.application_name
   .report-header__details__item
     .report-header__details__item__header
       %strong= t('admin.reports.status')
