--- a/app/views/disputes/strikes/_card.html.haml
+++ b/app/views/disputes/strikes/_card.html.haml
@@ -31,7 +31,7 @@
                 %time.formatted{ datetime: status.created_at.iso8601, title: l(status.created_at) }= l(status.created_at)
               - unless status.application.nil?
                 ·
-                = status.application.name
+                = status.application_name
           - else
             .one-liner= t('disputes.strikes.status', id: status_id)
             .strike-card__statuses-list__item__meta
