--- a/app/views/auth/confirmations/new.html.haml
+++ b/app/views/auth/confirmations/new.html.haml
@@ -9,8 +9,7 @@
       %h1.title= t('auth.confirmations.welcome_title', name: resource.account.username)
       %p.lead= t('auth.confirmations.registration_complete', domain: site_hostname)
       - if resource.created_by_application && redirect_to_app?
-        - app = resource.created_by_application
-        %p.lead= t('auth.confirmations.redirect_to_app_html', app_name: app.name, clicking_this_link: link_to(t('auth.confirmations.clicking_this_link'), app.confirmation_redirect_uri))
+        %p.lead= t('auth.confirmations.redirect_to_app_html', app_name: resource.created_by_application_name, clicking_this_link: link_to(t('auth.confirmations.clicking_this_link'), resource.created_by_application_confirmation_redirect_uri))
       - else
         %p.lead= t('auth.confirmations.proceed_to_login_html', login_link: link_to_login(t('auth.confirmations.login_link')))
     - else
